Upgrades to Scala 2.11
Changes the project so that core, generator and plugin are published for
Scala 2.10 and core is also published for Scala 2.11.

* Removes omniaTest dependency since it didn't really add anything.
* Fixed compilation errors/warnings.
* Renamed thrift struct fields since Scrooge is now stricter and the
  names can't be the same as reserved names.
* Adds sbt-doge as plugin to enable proper cross compilation.

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
 - ci/sbt-setup.sh
 - ci/sbt-setup-version.sh
 script:
-- sbt -Dsbt.global.base=$TRAVIS_BUILD_DIR/ci '; test; package; scripted' && ci/sbt-deploy.sh
+- sbt -Dsbt.global.base=$TRAVIS_BUILD_DIR/ci '; + test; + package; scripted' && ci/sbt-deploy.sh
   core generator && ci/sbt-deploy-ivy.sh plugin && ci/gh-pages.sh
 after_script:
 - rm -rf ci
